[package]
name = "cow-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
pest = "2.8.3"
pest_derive = "2.8.3"
thiserror = "2.0.17"

[package]
name = "cow-parser"
version = "0.1.0"
description = "A parser for the esoteric Cow programming language."
license = "MIT"
readme = "Readme.md"